Storage Type Add, View Delete, Edit Done - Yunnie

--- a/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addnewwarehouse.xhtml
@@ -25,6 +25,7 @@
                 </p:submenu>
                 <p:submenu label="Storage Type" >
                     <p:menuitem value="Add Storage Type" url="addnewstoragetype.xhtml" />
+                    <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
                 </p:submenu>
             </p:menubar>
             <br/>
