--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -34,6 +34,7 @@
                             </p:submenu>
                             <p:submenu label="Storage Type" >
                                 <p:menuitem value="Add Storage Type" url="addnewstoragetype.xhtml" />
+                                <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
                             </p:submenu>
                         </p:submenu>
                     </p:menu>
