--- a/MerlionPortal/MerlionPortal-war/web/mrp/forecastResult.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/forecastResult.xhtml
@@ -5,30 +5,53 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">  
     <h:head>
-        <title>Facelet Title</title>
+        <title>Forecast Result</title>
+        <style type="text/css">
+            .gritter-notice-wrapper {
+                left:200px;
+                top: 50px;
+            }
+        </style>
+        <style>
+            h1   {color:#E9967A}
+        </style>
     </h:head>
     <h:body>
         <h:form>
-            <h1>Welcome to MRP II page</h1>
-            <p:menubar>
+            <h1>Welcome to MRP II system</h1>
+            <p:megaMenu  style="margin-top:20px">
                 <p:menuitem value="MRP II" url="mrp.xhtml" />
-                <p:menuitem value="View All Products" url="viewallproducts.xhtml" />
-                <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
-                <p:menuitem value="Delete Product" url="deleteproduct.xhtml" />
-                <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
-                <p:menuitem value="Edit A Product" url="editproduct.xhtml" />
-                <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
-                <p:menuitem value="Forecasting" url="forecast.xhtml" />
+                <p:submenu label="Product Management" >
+                    <p:column>
+                        <p:submenu label="Product Catalog Management">
+                            <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
+                            <p:menuitem value="View and Edit Products" url="viewallproducts.xhtml" />
+                            <p:menuitem value="Delete a Product" url="deleteproduct.xhtml" />
+                            <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
+                        </p:submenu>
+                        <p:submenu label="BOM Management">
+                            <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
+                            <p:menuitem value="View and Edit BOM" url="viewbom.xhtml" />
+                        </p:submenu>
+                    </p:column>
+                </p:submenu>
+                <p:submenu label="Material Requirement Planning" >
+                    <p:column>
+                        <p:submenu label="Forecasting">
+                            <p:menuitem value="Forecasting" url="forecast.xhtml" />
+                        </p:submenu>
+                    </p:column>
+                </p:submenu>
+            </p:megaMenu>
 
-            </p:menubar>
             <p:panel header="View Forecast Result" style="margin-bottom:10px;">
-              
+
                 <p:chart type="line" model="#{forecastShowHistoryManagedBean.forecastSales}" style="height:300px" />
             </p:panel>
 
             <p:panel header="Satisfied with the result?" style="margin-bottom:10px;"> 
                 <h:panelGrid columns="1" style="margin-bottom:10px" cellpadding="5">
-                   
+
                     <p:commandButton value="Proceed"  action="#{forecastManagedBean.proceedMPS}" />
                     <p:commandButton value="Go Back"  action="#{forecastManagedBean.goBackForecastParameter}" />
                 </h:panelGrid>
