--- a/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
@@ -14,50 +14,53 @@
             .ui-layout, .ui-layout-doc, .ui-layout-unit, .ui-layout-wrap, .ui-layout-bd, .ui-layout-hd{
                 border: none;
             }
-            
-
+        </style>
+        <style>
+            h1   {color:#E9967A}
         </style>
     </h:head>
     <h:body>
         <h:form id="formMain">
             <h1>Welcome to MRP II system</h1>
-
-            <p:layout style="min-width:400px;min-height:1000px; borderless">      
-                <p:layoutUnit position="west" resizable="true" size="240" minSize="40" maxSize="1000">
-
-                    <p:menu>
-                        <p:submenu label =" Manage Your Products">
+            <p:megaMenu  style="margin-top:20px">
                 <p:menuitem value="MRP II" url="mrp.xhtml" />
-                <p:menuitem value="View All Products" url="viewallproducts.xhtml" />
-                <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
-                <p:menuitem value="Delete Product" url="deleteproduct.xhtml" />
-                <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
-                <p:menuitem value="Edit A Product" url="editproduct.xhtml" />
-                <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
-                 <p:menuitem value="View and Edit BOM" url="viewbom.xhtml" />
-                 <p:menuitem value="Forecasting" url="forecast.xhtml" />
+                <p:submenu label="Product Management" >
+                    <p:column>
+                        <p:submenu label="Product Catalog Management">
+                            <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
+                            <p:menuitem value="View and Edit Products" url="viewallproducts.xhtml" />
+                            <p:menuitem value="Delete a Product" url="deleteproduct.xhtml" />
+                            <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
                         </p:submenu>
-                    </p:menu>
+                        <p:submenu label="BOM Management">
+                            <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
+                            <p:menuitem value="View and Edit BOM" url="viewbom.xhtml" />
+                        </p:submenu>
+                    </p:column>
+                </p:submenu>
+                <p:submenu label="Material Requirement Planning" >
+                    <p:column>
+                        <p:submenu label="Forecasting">
+                            <p:menuitem value="Forecasting" url="forecast.xhtml" />
+                        </p:submenu>
+                    </p:column>
+                </p:submenu>
+            </p:megaMenu>
 
-                </p:layoutUnit>
-
-                <p:layoutUnit position="center">   
-                    <p:panel header="Welcome">
-                           
-                        Welcome to MRP II system!
-                        <Br/><Br/><Br/>
-                        MRP II system empowers your organization to: 
-                        <Br/><Br/>
-                        1. Manage your products
-                        <Br/><Br/>
-                        2. Conduct material requirement planning. This ensures materials are available for production, products are available for delivery to customers and 
-                        the lowest possible material and product levels in store could be maintained
-                        <Br/><Br/>
-                        3. Plan delivery schedules and conduct purchasing activities.
-                    </p:panel>
-                </p:layoutUnit>
-            </p:layout>
-
+            <p:layoutUnit position="center">   
+                <p:panel header="Welcome">
+                     Welcome to MRP II system!
+                    <Br/><Br/><Br/>
+                    MRP II system empowers your organization to:
+                    <Br/><Br/>
+                    1. Manage your products
+                    <Br/><Br/>
+                    2. Conduct material requirement planning. This ensures materials are available for production, products are available for delivery to customers and 
+                    the lowest possible material and product levels in store could be maintained
+                    <Br/><Br/>
+                    3. Plan delivery schedules and conduct purchasing activities.
+                </p:panel>
+            </p:layoutUnit>
         </h:form>
     </h:body>
 </html>
