Deleted file - Yunnie

--- a/MerlionPortal/MerlionPortal-war/web/wms/addnewstoragebin.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/addnewstoragebin.xhtml
@@ -24,7 +24,7 @@
                     <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
                 </p:submenu>
                 <p:submenu label="Storage Type" >
-                    <p:menuitem value="Add Storage Type" url="addnewstoragetype.xhtml" />
+                    <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
                     <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
                 </p:submenu>
                 <p:submenu label="Storage Bin" >
