--- a/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetypedisplay.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewstoragetypedisplay.xhtml
@@ -19,7 +19,7 @@
                     <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
                 </p:submenu>
                 <p:submenu label="Storage Type" >
-                    <p:menuitem value="Add Storage Type" url="addnewstoragetype.xhtml" />
+                    <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
                     <p:menuitem value="View Storage Type" url="viewstoragetype.xhtml" />
                 </p:submenu>
             </p:menubar>
