--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallwarehouse.xhtml
@@ -88,7 +88,7 @@
                 </p:column>
 
                 <p:column headerText = "Delete Warehouse">
-                    <p:commandButton action="#{assetManagedBean.deleteWarehouse(warehouse)}" value="Delete">
+                    <p:commandButton action="#{warehouseViewEditManagedBean.deleteWarehouse(warehouse)}" update="warehouse" value="Delete">
                     </p:commandButton> 
                 </p:column>
 
