dashboard hover javascript

--- a/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/dashboard.xhtml
@@ -11,6 +11,7 @@
         <ui:define name="more-imports">
             <ui:insert>
                 <link rel="stylesheet" href="${request.contextPath}/css/dashboard.css" type="text/css" />
+                <script src="${request.contextPath}/js/dashboard.js" type="text/javascript"></script>
             </ui:insert>
         </ui:define>
 
