--- a/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/admin/createuser.xhtml
@@ -6,15 +6,45 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
 
     <c:set var="root" value="${request.contextPath}" />
     <ui:composition template="${root}/templates/templateadmin.xhtml">
         <ui:param name="pageName" value="Create User" />
         <!-- Override Content -->
         <ui:define name="content">
-            <h:form>
-                <div class="container" >
-                    <h2>Create New User</h2>
+            <h2>Create New User</h2>
+            <form role="form">
+  <div class="form-group">
+    <label for="exampleInputEmail1">Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1">Password</label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputFile">File input</label>
+    <input type="file" id="exampleInputFile">
+    <p class="help-block">Example block-level help text here.</p>
+  </div>
+  <div class="checkbox">
+    <label>
+      <input type="checkbox"> Check me out
+    </label>
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
+            <p:panel id="createuser" style="margin-bottom:10px;" >
+                <p:ajaxStatus style="width:16px;height:16px;">
+                    <f:facet name="start">
+                        <h:graphicImage value="/img/load.gif" />
+                    </f:facet>
+                    <f:facet name="complete">
+                        <h:outputText value="" />
+                    </f:facet>
+                </p:ajaxStatus>
+                <c:if test ="#{createUserManagerBean.loginedUser.userType == 'superuser'}">
                     <p:panel id="createuser" header="Create User" style="margin-bottom:10px;" >
                         <p:ajaxStatus style="width:16px;height:16px;">
                             <f:facet name="start">
@@ -39,6 +69,13 @@
                                     <f:selectItem itemLabel="Select Company . . ." itemValue="" noSelectionOption="true" />
                                     <f:selectItems value="#{createUserManagerBean.companys}" var="company" itemLabel="#{company.name}"  itemValue="#{company.companyId}"/>
                                 </h:selectOneMenu>
+
+                    <p:outputLabel style="font-weight: bold" value="Last Name * : "/>
+                    <h:inputText required="true" requiredMessage="Last Name is required" value="#{createUserManagerBean.lastName}" styleClass="form-control" />
+
+                    <p:outputLabel style="font-weight: bold" value="Email Address * : "/>
+                    <h:inputText required="true" requiredMessage="Email Address is required" value="#{createUserManagerBean.emailAddress}" styleClass="form-control" />
+
                             </h:panelGrid>
                             <p:separator />
 
@@ -55,46 +92,25 @@
                                 <f:selectItem itemLabel="Ms." itemValue="Ms." />
                             </h:selectOneMenu>
 
-                            <p:outputLabel style="font-weight: bold" value="First Name * : "/>
-                            <h:inputText required="true" requiredMessage="First Name is required" value="#{createUserManagerBean.firstName}" styleClass="form-control" />
+                    <p:outputLabel style="font-weight: bold" value="Postal Address * : "/>
+                    <h:inputText required="true" requiredMessage="Postal Address is required" value="#{createUserManagerBean.postalAddress}" styleClass="form-control" />
 
-                            <p:outputLabel style="font-weight: bold" value="Last Name * : "/>
-                            <h:inputText required="true" requiredMessage="Last Name is required" value="#{createUserManagerBean.lastName}" styleClass="form-control" />
-
-                            <p:outputLabel style="font-weight: bold" value="Email Address * : "/>
-                            <h:inputText required="true" requiredMessage="Email Address is required" value="#{createUserManagerBean.emailAddress}" styleClass="form-control" >
-                                <f:validator validatorId="custom.emailValidator" />
-                            </h:inputText>
-
-                            <p:outputLabel style="font-weight: bold" value="Password * : "/>
-                            <h:inputText required="true" requiredMessage="Password is required" value="#{createUserManagerBean.password}" styleClass="form-control" />
-
-                            <p:outputLabel style="font-weight: bold" value="Postal Address * : "/>
-                            <h:inputText required="true" requiredMessage="Postal Address is required" value="#{createUserManagerBean.postalAddress}" styleClass="form-control" />
-
-                            <p:outputLabel style="font-weight: bold" value="Contact Number * : "/>
-                            <h:inputText required="true" requiredMessage="Contact Number is required" value="#{createUserManagerBean.contactNumber}" styleClass="form-control" />
+                    <p:outputLabel style="font-weight: bold" value="Contact Number * : "/>
+                    <h:inputText required="true" requiredMessage="Contact Number is required" value="#{createUserManagerBean.contactNumber}" styleClass="form-control" />
 
 
+                    <p:outputLabel value="Credit * :" style="font-weight: bold"/>
+                    <h:selectOneMenu required="true" requiredMessage="Please select credit" id="credit" value="#{createUserManagerBean.credit}" styleClass="form-control">
+                        <f:selectItem itemLabel="Not Applicable" itemValue="Not Applicable" />
+                        <f:selectItem itemLabel="Pass" itemValue="Pass" />
+                        <f:selectItem itemLabel="Fail" itemValue="Fail" />
+                    </h:selectOneMenu>
 
-                            <p:outputLabel value="Credit * :" style="font-weight: bold"/>
-                            <h:selectOneMenu required="true" requiredMessage="Please select credit" id="credit" value="#{createUserManagerBean.credit}" styleClass="form-control">
-                                <f:selectItem itemLabel="Not Applicable" itemValue="Not Applicable" />
-                                <f:selectItem itemLabel="Pass" itemValue="Pass" />
-                                <f:selectItem itemLabel="Fail" itemValue="Fail" />
-                            </h:selectOneMenu>
 
-                            <p:outputLabel value="Select :" style="font-weight: bold" />
-                            <p:selectCheckboxMenu id="roles" value="#{createUserManagerBean.selectedRoles}"  label="roles" 
-                                                  filter="true" filterMatchMode="startsWith" panelStyle="width:300px" styleClass="form-control" requiredMessage="Please select role">
-                                <f:selectItems value="#{createUserManagerBean.roles}" var="role" itemLabel="#{role.roleName}" itemValue="#{role.userRoleId}"/>
-                            </p:selectCheckboxMenu>
-                        </h:panelGrid>
-                        <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
-                        <p:commandButton id="ajax" actionListener="#{createUserManagerBean.createSystemUser}" value="Create User" update="createuser" styleClass="btn btn-success" icon="ui-icon-check"/>
-                    </p:panel>
                 </div>
-            </h:form>
+                <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
+                <p:commandButton id="ajax" actionListener="#{createUserManagerBean.createSystemUser}" value="Create User" update="createuser" styleClass="btn btn-success" icon="ui-icon-check"/>
+            </p:panel>
             <script type="text/javascript">
                 PrimeFaces.validator['custom.emailValidator'] = {
                     pattern: /\S+@\S+/,
@@ -113,3 +129,7 @@
         </ui:define>
     </ui:composition>
 </html>
+                            <p:outputLabel style="font-weight: bold" value="Email Address * : "/>
+                            <h:inputText required="true" requiredMessage="Email Address is required" value="#{createUserManagerBean.emailAddress}" styleClass="form-control" >
+                                <f:validator validatorId="custom.emailValidator" />
+                            </h:inputText>
