--- a/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/mrp/mrp.xhtml
@@ -3,49 +3,38 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:p="http://primefaces.org/ui">
-    <h:head>
-        <title>Home</title>
-        <style type="text/css">
-            .gritter-notice-wrapper {
-                left:200px;
-                top: 50px;
-            }
-            .ui-layout, .ui-layout-doc, .ui-layout-unit, .ui-layout-wrap, .ui-layout-bd, .ui-layout-hd{
-                border: none;
-            }
-        </style>
-        <style>
-            h1   {color:#E9967A}
-        </style>
-    </h:head>
-    <h:body>
-        <h:form id="formMain">
-            <h1>Welcome to MRP II system</h1>
-            <p:megaMenu  style="margin-top:20px">
-                <p:menuitem value="MRP II" url="mrp.xhtml" />
-                <p:submenu label="Product Management" >
-                    <p:column>
-                        <p:submenu label="Product Catalog Management">
-                            <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
-                            <p:menuitem value="View and Edit Products" url="viewallproducts.xhtml" />
-                            <p:menuitem value="Delete a Product" url="deleteproduct.xhtml" />
-                            <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
-                        </p:submenu>
-                        <p:submenu label="BOM Management">
-                            <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
-                            <p:menuitem value="View and Edit BOM" url="viewbom.xhtml" />
-                        </p:submenu>
-                    </p:column>
-                </p:submenu>
-                <p:submenu label="Material Requirement Planning" >
-                    <p:column>
-                        <p:submenu label="Forecasting">
-                            <p:menuitem value="Forecasting" url="forecast.xhtml" />
-                        </p:submenu>
-                    </p:column>
-                </p:submenu>
-            </p:megaMenu>
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
+
+    <ui:composition template="templates/template.xhtml">
+        <h:head>
+            <title>Home</title>
+        </h:head>
+        <h:body>
+            <h:form id="formMain">
+                <h1>Welcome to MRP II system</h1>
+
+                <p:layout style="min-width:400px;min-height:1000px; borderless">      
+                    <p:layoutUnit position="west" resizable="true" size="240" minSize="40" maxSize="1000">
+
+                        <p:menu>
+                            <p:submenu label =" Manage Your Products">
+                                <p:menuitem value="MRP II" url="mrp.xhtml" />
+                                <p:menuitem value="View All Products" url="viewallproducts.xhtml" />
+                                <p:menuitem value="Add New Product" url="addnewproduct.xhtml" />
+                                <p:menuitem value="Delete Product" url="deleteproduct.xhtml" />
+                                <p:menuitem value="View A Product" url="viewaproduct.xhtml" />
+                                <p:menuitem value="Edit A Product" url="editproduct.xhtml" />
+                                <p:menuitem value="Add a New Component" url="addnewcomponent.xhtml" />
+                                <p:menuitem value="View and Edit BOM" url="viewbom.xhtml" />
+                                <p:menuitem value="Forecasting" url="forecast.xhtml" />
+                            </p:submenu>
+                        </p:menu>
+
+                    </p:layoutUnit>
+
+                    <p:layoutUnit position="center">   
+                        <p:panel header="Welcome">
 
             <p:layoutUnit position="center">   
                 <p:panel header="Welcome">
